Fix #48 - Fixed horizontal scroll bar in login and after login pages.

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -2490,7 +2490,7 @@ img.smallicon {
 /* Login Page */
 /* Background Image */
 #page-login-index .outercont {
-    padding: 0 !important;
+    padding: 0 15px !important;
     margin: 0 !important;
 }
 
